# lllm-charge

./: .gitignore  .mcp.json  .zipignore  CLAUDE.md  Dockerfile  Dockerfile.production  HOW-TO-USE-DEVDOCS-MCP.md  MCP_VERIFICATION_REPORT.md  README.md  debug-cron-api.html  debug-minimal.html  debug-test.html  devdocs-integration-summary.md  docker-compose.production.yml  docker-compose.yml  eslint.config.js  jest.config.cjs  jest.config.react.cjs  nginx.conf  package-lock.json  package.json  prove-network-calls-working.js  prove-real-api-calls.cjs  real-dashboard.html  tailwind.config.js  test-cron-page-fix.mjs  test-cron-react-debug.html  test-dashboard-server.js  test-dashboard-server.mjs  test-dom-fix-verification.html  test-drag-verification.html  test-file-browser-integration-complete.js  test-final-drag-verification.html  test-final-verification.html  test-godot-analyze-button-functionality.cjs  test-godot-error-handling-improvements.js  test-godot-file-browser-integration.js  test-godot-project-path-fix.js  test-lm-studio-default.js  test-mcp-direct.cjs  (+11 more)
.claude/: settings.local.json
.devdocs/: config.json
backend/: .env.example  Dockerfile  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: agents.py  base_router.py  deps.py  health.py  projects.py  specs.py  workflows.py
backend/app/core/: exceptions.py  logging.py
backend/app/database/: backup.py  database.py  performance.py
backend/app/database/dal/: agents_dal.py  base_dal.py  flows_dal.py  projects_dal.py  repository.py  specs_dal.py
backend/app/database/migrations/: migrate_from_js.py  rollback.py  test_migration.py
backend/app/database/models/: agents.py  base.py  flows.py  main.py  metrics.py  projects.py  schemas.py  specs.py  workflows.py
backend/app/mcp/: __init__.py  server.py  tools.py
backend/app/middleware/: __init__.py  cors.py  error_handling.py  logging.py
backend/app/models/: __init__.py  base.py
backend/app/schemas/: agents.py  projects.py  specs.py  workflows.py
backend/app/static/: __init__.py
backend/app/websocket/: connection_manager.py  handlers.py  manager.py
backend/monitoring/: prometheus.yml
backend/nginx/: nginx.conf
backend/redis/: redis.conf
backend/tests/: __init__.py  conftest.py  test_backup.py  test_main.py  test_migrations.py  test_models.py
blender_pipeline/: __init__.py
config/: agents.json  router.json
coverage/: index.html  lcov.info
docs/: FAKE_STATIC_DATA_AUDIT.md  FEATURE_AUDIT.md  MCP_INTEGRATION_GUIDE.md  MOCK_DATA_AUDIT.md  SETUP-GUIDE.md  cost-comparison-demo.md  enhanced-setup-demo.md  gdscript-support-analysis.md
src/: index.ts  (+4 more)
(+380 files in other folders)
